[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuronchat"
version = "0.1.0"
description = "Python adaptation of the NeuronChat R package"
authors = [{name = "OpenAI", email = 'example@example.com'}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
plots = ["matplotlib", "seaborn"]
ann = ["anndata"]
analysis = ["scikit-learn"]

[tool.setuptools.packages.find]
where = ["python"]
